[gd_scene load_steps=5 format=3 uid="uid://b0fruakivkll2"]

[ext_resource type="Script" path="res://Scripts/UI/options.gd" id="1_tvech"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_j70m7"]
bg_color = Color(0.233925, 0.233925, 0.233925, 1)

[sub_resource type="LabelSettings" id="LabelSettings_85ugw"]
font_size = 35
shadow_color = Color(0, 0, 0, 0.2)
shadow_offset = Vector2(3, 5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cjr2d"]
bg_color = Color(0.133196, 0.133196, 0.133196, 0.822)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.807843, 0.0666667, 0, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
corner_detail = 5

[node name="Options" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_tvech")

[node name="PanelContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_j70m7")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
horizontal_scroll_mode = 0
vertical_scroll_mode = 3

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 3

[node name="Options" type="Label" parent="PanelContainer/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Options"
label_settings = SubResource("LabelSettings_85ugw")
vertical_alignment = 1

[node name="Volume" type="Label" parent="PanelContainer/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Volume"

[node name="VolumeSlider" type="HSlider" parent="PanelContainer/MarginContainer/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 0

[node name="Resolution" type="Label" parent="PanelContainer/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Windowed Resolution"

[node name="ResolutionOptionBox" type="OptionButton" parent="PanelContainer/MarginContainer/ScrollContainer/VBoxContainer"]
clip_contents = true
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 0

[node name="Display" type="Label" parent="PanelContainer/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Display
"

[node name="FullscreenToggle" type="CheckButton" parent="PanelContainer/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Fullscreen"

[node name="BorderlessToggle" type="CheckButton" parent="PanelContainer/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Borderless"

[node name="Controls" type="Label" parent="PanelContainer/MarginContainer/ScrollContainer/VBoxContainer"]
clip_contents = true
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_vertical = 1
theme_override_font_sizes/font_size = 25
text = "Controls"
vertical_alignment = 2

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/MarginContainer/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 168)
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/ScrollContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button" type="Button" parent="PanelContainer/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Reset controls to default"

[node name="Exit" type="Button" parent="PanelContainer/MarginContainer"]
custom_minimum_size = Vector2(60, 45)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_colors/font_color = Color(0.805996, 0.067445, 0, 1)
theme_override_font_sizes/font_size = 35
theme_override_styles/focus = SubResource("StyleBoxFlat_cjr2d")
theme_override_styles/hover = SubResource("StyleBoxFlat_cjr2d")
text = "X"

[connection signal="drag_ended" from="PanelContainer/MarginContainer/ScrollContainer/VBoxContainer/VolumeSlider" to="." method="_on_volume_change"]
[connection signal="item_selected" from="PanelContainer/MarginContainer/ScrollContainer/VBoxContainer/ResolutionOptionBox" to="." method="_on_resolution_option_selected"]
[connection signal="toggled" from="PanelContainer/MarginContainer/ScrollContainer/VBoxContainer/FullscreenToggle" to="." method="_on_fullscreen_button_toggled"]
[connection signal="toggled" from="PanelContainer/MarginContainer/ScrollContainer/VBoxContainer/BorderlessToggle" to="." method="_on_borderless_button_toggled"]
[connection signal="pressed" from="PanelContainer/MarginContainer/ScrollContainer/VBoxContainer/Button" to="." method="_on_reset_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/Exit" to="." method="_on_exit_pressed"]
